# fit-ctf

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  REFACTORING_GUIDE.md  click-commands.html  fix_remaining_calls.sh  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  tasks.py
.doctrees/: click-commands.doctree  environment.pickle  index.doctree
.github/workflows/: build-documentation.yaml  run-tests.yaml
_sources/: index.rst.txt
config/base_images/base_debian/: Containerfile
config/base_images/base_rhel/: Containerfile
config/base_images/base_ssh_debian/: Containerfile
config/base_images/base_ssh_rhel/: Containerfile  init_script.sh
config/base_images/base_ssh_ubuntu/: Containerfile  init_script.sh
config/base_images/base_ubi/: Containerfile
config/base_images/base_ubuntu/: Containerfile
config/setup/: 99-ctf-rule.conf  env_example
db/: admin_env_example  compose.yaml
db/mongodb-quadlet/: init-mongo.js  mongodb.container.j2  mongodb.volume
docs/sphinx/: click-commands.rst
schemas/v1/: database_dump.yaml  network.yaml  project.yaml  secret.yaml  service.yaml  service_editor.yaml  setup.yaml  user.yaml  user_enrollment.yaml
src/fit_ctf/: __init__.py  __main__.py  ctf_app.py  ctf_base.py  exceptions.py  path_mgmt.py  utils.py
src/fit_ctf/cli/: __init__.py  data_mgmt.py  enrollment.py  module.py  project.py  project_cluster.py  scenario.py  user.py  user_cluster.py  user_progress.py  utils.py
src/fit_ctf/components/: constants.py  exceptions.py  utils.py
src/fit_ctf/models/: __init__.py  base.py
src/fit_ctf/templates/: __init__.py  exceptions.py
src/fit_ctf_backend/: __main__.py  ctf_manager.py
src/fit_ctf_backend/cli/: __init__.py  completion.py  data_mgmt.py  enrollment.py  module.py  project.py  project_cluster.py  system.py  user.py  user_cluster.py
src/fit_ctf_cli/: __init__.py  __main__.py  ctf_app.py
src/fit_ctf_cli/cli/: __init__.py  completion.py  data_mgmt.py  enrollment.py  module.py  project.py  project_cluster.py  scenario.py  user.py  user_cluster.py  user_progress.py  utils.py
src/fit_ctf_components/: base.py  constants.py  exceptions.py  types.py  utils.py
src/fit_ctf_components/auth/: auth_interface.py  local_auth.py
src/fit_ctf_components/container_client/: __init__.py  container_client_interface.py  docker_client.py  mock_client.py  podman_client.py
src/fit_ctf_components/data_parser/: __init__.py  data_parser_interface.py  yaml_parser.py
src/fit_ctf_components/data_view/: __init__.py  csv_view.py  tabulate_view.py
src/fit_ctf_components/logger/: default_logger.py  logger_interface.py
src/fit_ctf_components/secret_mgr/: default_secret_mgr.py  secret_mgr_interface.py
src/fit_ctf_models/: __init__.py  base.py  cluster.py  enrollment.py  module_manager.py  project.py  secret.py  team.py  user.py  user_enrollment.py  user_progress.py
src/fit_ctf_models/clusters/: __init__.py  cluster_document.py  cluster_scenario_mixin.py  config_models.py  project_cluster.py  scenario_compile.py  scenario_config_validation.py  scenario_manager.py  secret_slots.py  user_cluster.py
src/fit_ctf_models/utils/: __init__.py  exceptions.py  mongo_queries.py
src/fit_ctf_rendezvous/: __main__.py  actions.py  core_manager.py  exceptions.py  rendezvous_app.py  rendezvous_core.py  tui_log_sink.py  user_rendezvous_settings.py  utils.py  view.py
src/fit_ctf_rendezvous/components/: rendezvous_logger.py
src/fit_ctf_rendezvous/i18n/: __init__.py  strings_cs.py  strings_en.py
src/fit_ctf_rendezvous/resources/: welcome_page.md
src/fit_ctf_rendezvous/screens/: base_screen.py
src/fit_ctf_rendezvous/widgets/: __init__.py  app_content_container.py  app_sidebar.py  core_widget.py  login_dialog.py
src/fit_ctf_templates/: __init__.py  template_registry.py
src/fit_ctf_utils/: __init__.py  constants.py  exceptions.py  mongo_queries.py  types.py
src/fit_ctf_utils/auth/: local_auth.py  (+1 more)
tests/: __init__.py  conftest.py  test_container_client.py  test_empty.py  test_scenario_compile_modules.py  test_scenario_runtime_inject.py  test_scenarios.py  test_volume_src_path_jinja.py
tests/backend/: test_cluster_logging.py  test_ctf_mgr.py  test_enroll.py  test_module.py  test_progress.py  test_project.py  test_secrets.py  test_services.py  test_sessions.py  test_user.py  test_user_progress.py
tests/cli/: test_cli_data_mgmt.py  test_cli_enroll.py  test_cli_module.py  test_cli_project.py  test_cli_user.py  test_cli_user_progress.py
tests/fixtures/: connected_data.yaml  project_data.yaml  unconnected_data.yaml  user_data.yaml
tests/rendezvous/: test_login.py  test_navigation.py  test_user_rendezvous_settings.py
tests/workflow/: container_helpers.py  test_complex_workflow.py  test_workflow2.py  test_workflow_container.py  workflow_helpers.py
(+125 files in other folders)
